--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,17 @@ enum_dispatch = "0.3.13"
 rand = "0.8.5"
 rayon = "1.10.0"
 
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "bench"
+harness = false
+
 [profile.release]
+lto = "thin"
+codegen-units = 1
+
+[profile.bench]
 lto = "thin"
 codegen-units = 1
