feat: smoothen perlin noise

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ derive_builder = "0.20.0"
 derive_more = "0.99.17"
 enum_dispatch = "0.3.13"
 image = "0.25.1"
+itertools = "0.12.1"
 palette = "0.7.5"
 rand = "0.8.5"
 rayon = "1.10.0"
